[gd_scene load_steps=10 format=3 uid="uid://bxjy7owvcaiv7"]

[ext_resource type="Script" path="res://Scenes/hp.gd" id="1_y5wwp"]
[ext_resource type="Texture2D" uid="uid://bne0uvbrji6iu" path="res://assets/operators/animation/hearth_card.png" id="2_j7uyi"]
[ext_resource type="FontFile" uid="uid://c3vhg50rp7w4u" path="res://assets/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="3_t6ad3"]
[ext_resource type="AudioStream" uid="uid://cf46oljplnbkl" path="res://assets/sound/card-sounds-35956.mp3" id="4_6op4p"]

[sub_resource type="Animation" id="Animation_i8f06"]
length = 0.001

[sub_resource type="Animation" id="Animation_1m2io"]
resource_name = "opening"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_k256t"]
resource_name = "defense"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.921931, 0.91415, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ohht"]
_data = {
"RESET": SubResource("Animation_i8f06"),
"defense": SubResource("Animation_k256t"),
"opening": SubResource("Animation_1m2io")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0xc2"]
size = Vector2(67.375, 91.9375)

[node name="hp" type="TextureButton"]
custom_minimum_size = Vector2(195, 280)
script = ExtResource("1_y5wwp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(100.233, 141.426)
texture = ExtResource("2_j7uyi")
hframes = 9

[node name="hp" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 111.0
offset_right = 178.0
offset_bottom = 172.0
theme_override_colors/font_color = Color(0.419608, 0.231373, 0.32549, 1)
theme_override_fonts/font = ExtResource("3_t6ad3")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="opening" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6op4p")

[node name="AttackSpot" type="Node2D" parent="."]
position = Vector2(90, 131)

[node name="animation_hp_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ohht")
}

[node name="area_player" type="Area2D" parent="."]
position = Vector2(2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_player"]
position = Vector2(93.6875, 134.969)
shape = SubResource("RectangleShape2D_u0xc2")

[connection signal="animation_finished" from="animation_hp_player" to="." method="_on_animation_hp_player_animation_finished"]
[connection signal="area_entered" from="area_player" to="." method="_on_area_player_area_entered"]
[connection signal="area_exited" from="area_player" to="." method="_on_area_player_area_exited"]
